# Kratos

./: .gitignore  .gitmodules  .kratoscompilation.info  CMakeLists.txt  Kratos  configure_sh_general.txt  configure_simple.sh
applications/GeoMechanicsApplication/: CMakeLists.txt  GeoMechanicsApplication.py  README.md  geo_mechanics_application.cpp  geo_mechanics_application.h  geo_mechanics_application_variables.cpp  geo_mechanics_application_variables.h
applications/GeoMechanicsApplication/custom_conditions/: U_Pw_condition.cpp  U_Pw_condition.hpp  U_Pw_face_load_condition.cpp  U_Pw_face_load_condition.hpp  U_Pw_face_load_interface_condition.cpp  U_Pw_face_load_interface_condition.hpp  U_Pw_force_condition.cpp  U_Pw_force_condition.hpp  U_Pw_normal_face_load_condition.cpp  U_Pw_normal_face_load_condition.hpp  U_Pw_normal_flux_FIC_condition.cpp  U_Pw_normal_flux_FIC_condition.hpp  U_Pw_normal_flux_condition.cpp  U_Pw_normal_flux_condition.hpp  U_Pw_normal_flux_interface_condition.cpp  U_Pw_normal_flux_interface_condition.hpp  general_U_Pw_diff_order_condition.cpp  general_U_Pw_diff_order_condition.hpp  line_load_2D_diff_order_condition.cpp  line_load_2D_diff_order_condition.hpp  line_normal_fluid_flux_2D_diff_order_condition.cpp  line_normal_fluid_flux_2D_diff_order_condition.hpp  line_normal_load_2D_diff_order_condition.cpp  line_normal_load_2D_diff_order_condition.hpp  surface_load_3D_diff_order_condition.cpp  surface_load_3D_diff_order_condition.hpp  surface_normal_fluid_flux_3D_diff_order_condition.cpp  surface_normal_fluid_flux_3D_diff_order_condition.hpp  surface_normal_load_3D_diff_order_condition.cpp  surface_normal_load_3D_diff_order_condition.hpp
applications/GeoMechanicsApplication/custom_elements/: U_Pw_element.cpp  U_Pw_element.hpp  U_Pw_small_strain_FIC_element.cpp  U_Pw_small_strain_FIC_element.hpp  U_Pw_small_strain_element.cpp  U_Pw_small_strain_element.hpp  U_Pw_small_strain_interface_element.cpp  U_Pw_small_strain_interface_element.hpp  U_Pw_small_strain_link_interface_element.cpp  U_Pw_small_strain_link_interface_element.hpp  small_strain_U_Pw_diff_order_element.cpp  small_strain_U_Pw_diff_order_element.hpp
applications/GeoMechanicsApplication/custom_processes/: apply_component_table_process.hpp  apply_constant_hydrostatic_pressure_process.hpp  apply_double_table_process.hpp  apply_hydrostatic_pressure_table_process.hpp
applications/GeoMechanicsApplication/custom_python/: add_custom_processes_to_python.cpp  add_custom_processes_to_python.h  add_custom_strategies_to_python.cpp  add_custom_strategies_to_python.h  add_custom_utilities_to_python.cpp  add_custom_utilities_to_python.h  geo_mechanics_python_application.cpp
applications/GeoMechanicsApplication/custom_utilities/: comparison_utilities.hpp  element_utilities.hpp  math_utilities.hpp
applications/GeoMechanicsApplication/python_scripts/: apply_normal_load_table_process.py  apply_scalar_constraint_table_process.py  apply_vector_constraint_table_process.py  geomechanics_U_Pw_solver.py
applications/GeoMechanicsApplication/tests/: generalTests.py  test_GeoMechanicsApplication.py
applications/MGISApplication/: CMakeLists.txt  MGISApplication.py  README.md  license.txt  mgis_application.cpp  mgis_application.h  mgis_application_variables.cpp  mgis_application_variables.h
applications/MGISApplication/WIP/: mfront_behaviour.cpp  mfront_behaviour.h
applications/MGISApplication/custom_python/: add_custom_constitutive_laws_to_python.cpp  add_custom_constitutive_laws_to_python.h  add_custom_processes_to_python.cpp  add_custom_processes_to_python.h  add_custom_utilities_to_python.cpp  add_custom_utilities_to_python.h  mgis_python_application.cpp
applications/MGISApplication/tests/: mgis_application_test_factory.py  run_cpp_unit_tests.py  test_MGISApplication.py
applications/ManufacturedFluidSolutionsApplication/: CMakeLists.txt  ManufacturedFluidSolutionsApplication.py  manufactured_fluid_solutions_application.cpp  manufactured_fluid_solutions_application.h  manufactured_fluid_solutions_application_variables.cpp  manufactured_fluid_solutions_application_variables.h
applications/ManufacturedFluidSolutionsApplication/custom_manufactured/: codina_vortex.cpp  codina_vortex.h  eca_flow.cpp  eca_flow.h  manufactured_solution.cpp  manufactured_solution.h
applications/ManufacturedFluidSolutionsApplication/custom_python/: add_custom_manufactured_to_python.cpp  add_custom_manufactured_to_python.h  add_custom_utilities_to_python.cpp  add_custom_utilities_to_python.h  manufactured_fluid_solutions_python_application.cpp
applications/ManufacturedFluidSolutionsApplication/custom_utilities/: manufactured_solution_utility.cpp  manufactured_solution_utility.h
applications/ManufacturedFluidSolutionsApplication/python_scripts/: apply_custom_body_force_process.py  apply_custom_pressure_process.py  apply_custom_velocity_process.py  manufactured_material_acceleration_process.py  manufactured_solution_base_process.py  manufactured_solution_process.py  print_error_statistics_process.py
applications/ManufacturedFluidSolutionsApplication/symbolic_generation/: eca_flow_symbolic.cpp  manufactured_symbolic.py  manufactured_template.cpp
applications/ManufacturedFluidSolutionsApplication/tests/: generalTests.py  (+1 more)
applications/PlasmaDynamicsApplication/: CMakeLists.txt  PlasmaDynamicsApplication.py  README.md  plasma_dynamics_application.cpp  plasma_dynamics_application.h  plasma_dynamics_application_variables.cpp  plasma_dynamics_application_variables.h
applications/RANSConstitutiveLawsApplication/: CMakeLists.txt  RANSConstitutiveLawsApplication.py  rans_constitutive_laws_application.cpp  rans_constitutive_laws_application.h  rans_constitutive_laws_application_variables.cpp  rans_constitutive_laws_application_variables.h
applications/custom_DEM_utils_application/: CMakeLists.txt  CustomDEMUtilsApplication.py  custom_DEM_utils_application.cpp  custom_DEM_utils_application.h  license.txt
external_libraries/doctest/: CMakeLists.txt
runtests/: CMakeLists.txt  ktests_main.cpp
(+2764 files in other folders)
